[tool.poetry]
name = "github-forwarding"
version = "0.1.0"
description = ""
authors = ["Oliver Wilkes <oliverwilkes2006@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nextcord = "^3.1.0"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
